V1.1.9
• Fixed Dyed Potted Fern not rendering properly
• Fixed Dyed Potted Mangrove Propagule not rendering properly
• Added Portuguese Brazilian translations
• Chalk Sticks now work while flying



V1.1.8
• Fixed Cork Log & Stripped Cork Log having the wrong sounds

V1.1.7
• Fixed all stonecutter slab recipes in the mod giving you the wrong amount of slabs



V1.1.6
• Fixed Glazed Terracotta Texture to allow for more patterns to be made
• Glazed Terracotta now has correct loot table and mining speed




V1.1.5
• Cork Sapling can now be used in the composter
• Cork Leaves can now be used in the composter
• da_dk Translations done by jquann1998!  (Thank you!)


V1.1.4
Bug Fixes
• Fixed missing bleached chalk dust translation
Features
• Changed Paintbrush Recipe
• Added Russian translations (Thank you Arkoto & Clarthen!)




V1.1.2
Bug Fixes
• Fixed paintbrushes breaking beds instead of painting them
• Fixed Chalk Sticks not being in Creative Category for some people
• Fixed Chalk Sticks not showing up in JEI for some people!
Creative Category
• Chalk Sticks are now put after TNT minecarts
Recipes
• Added Bleached Chalk Stick Recipe!



V1.1.0
Code Changes
• Refactored Code and Packages
• Got rid of an unused mixin
• Removed Mixin Extras
Creative Category
• Paintbrushes are now put after the brush item
Bug Fixes
• Fixed Paintbrushes not being in Creative Category for some people
• Fixed Paintbrushes not showing up in JEI for some people!
Recipes
• Added Bleach Decorated Pot Recipe
• Added Bleachdew Paintbrush Recipe!
Lang
• Added Ukraine Translations (uk_ua.json) Thank you Unroman!
Block Features
• You can now make chalk dust glow with glow ink sacs!





V1.0.3
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Code Changes
• Refactored a bunch of classes
• Got rid of unused code