@@ -1,3 +1,3 @@
-// 1.20.1	2024-05-31T16:09:15.3839615	Tags for minecraft:worldgen/biome mod id arts_and_crafts
-f3ef2895c49e29111297e950661e5bc71a79989e data/arts_and_crafts/tags/worldgen/biome/gypsum_can_generate_in.json
+// 1.20.1	2024-09-21T19:15:13.5736391	Tags for minecraft:worldgen/biome mod id arts_and_crafts
+7d133f2ce6395a7f80d1aa9eb4a2bfeb7a5d89d8 data/arts_and_crafts/tags/worldgen/biome/gypsum_can_generate_in.json
 4f1e83c23a87a6c70e1b1f0710f56d28cbc3f0b1 data/arts_and_crafts/tags/worldgen/biome/soapstone_can_generate_in.json
