@@ -1,5 +1,6 @@
 {
   "values": [
+    "#minecraft:has_structure/desert_pyramid",
     "minecraft:desert"
   ]
 }
